WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15083
Some symbols in WebKit do not need to be exported
https://bugs.webkit.org/show_bug.cgi?id=15083
Summary
Some symbols in WebKit do not need to be exported
Rob Buis
Reported
2007-08-26 12:29:47 PDT
There are some occasions of helper functions in cpp files that do not need to be exposed/exported.
Attachments
Symbol export fixes
(6.48 KB, patch)
2007-08-26 12:33 PDT
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2007-08-26 12:33:56 PDT
Created
attachment 16126
[details]
Symbol export fixes Do not export these symbols to get some smaller object file sizes. Cheers, Rob.
Darin Adler
Comment 2
2007-08-31 18:25:16 PDT
Comment on
attachment 16126
[details]
Symbol export fixes All good changes. r=me
Rob Buis
Comment 3
2007-09-01 00:50:14 PDT
Landed in
r25340
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug